# AgenticRAGOpenFDA

./: .env.example  .gitignore  README.md  START_HERE.md  STRUCTURE.md  demo_app.py  docker-compose.langfuse.yml  docker-compose.prod.yml  docker-compose.redis.yml  docker-compose.yml  requirements.txt  run.sh  run_streamlit.sh
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  logging_config.py  main.py  metrics.py  models.py  observability.py  scheduler.py  security.py
backend/app/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
backend/app/api/: __init__.py  ask.py  chat.py  health.py  ingest.py  metrics.py  sessions.py  trace.py
backend/app/ingestion/: __init__.py  chunker.py  (+3 more)
backend/maistorage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_agent.py  test_answer_cache.py  test_api.py  test_ask.py  test_cache.py  test_calibration.py  test_chunker.py  test_citations.py  test_db.py  test_dynamic_catalog.py  test_e2e.py  test_golden_set.py  test_grade_batch.py  test_growth.py  test_guardrail.py  test_guardrail_sharpness.py  test_http.py  test_indexer.py  test_metrics.py  test_observability.py  test_openai_embed_guard.py  test_openfda.py  test_prompts.py  test_reconcile.py  test_resilience.py  test_retrieval_robustness.py  test_scheduler.py  test_scoped_retrieval.py  test_scoping.py  test_security_auth.py  test_security_hardening.py  test_security_headers.py  test_security_idor.py  test_security_injection.py  test_security_input.py  test_seed_corpus.py  test_sessions.py  test_telegram.py
(+86 files in other folders)
